# Skore

./: .gitignore  CMakeLists.txt  README.md
Player/: CMakeLists.txt
Runtime/: CMakeLists.txt
Runtime/Source/Skore/: App.cpp  App.hpp  Defines.hpp
Runtime/Source/Skore/Core/: Algorithm.hpp  Allocator.cpp  Allocator.hpp  Array.hpp  Formatter.hpp  Function.hpp  Hash.hpp  HashBase.hpp  HashMap.hpp  HashSet.hpp  Logger.cpp  Logger.hpp  New.hpp  Pair.hpp  Path.hpp  Random.hpp  Reflection.cpp  Reflection.hpp  SharedPtr.hpp  Span.hpp  String.hpp  StringConverter.cpp  StringConverter.hpp  StringView.hpp  Traits.hpp  TypeID.hpp  TypeInfo.hpp  UUID.hpp
Runtime/Source/Skore/IO/: FileSystem.cpp  FileSystem.hpp  FileSystemUnix.cpp  FileSystemWin32.cpp  FileTypes.hpp
Runtime/Source/Skore/Math/: Base.hpp  Math.hpp  MathTypes.hpp
Runtime/Source/Skore/Platform/: Platform.cpp  Platform.hpp  PlatformGLFW.cpp  PlatformStyle.hpp  PlatformStyleWin32.cpp  PlatformTypes.hpp  PlatformUnix.cpp  PlatformWin32.cpp  PlatformWin32Style.cpp
Runtime/Source/Skore/Render/: RenderTypes.hpp
Runtime/Source/Skore/Repository/: Repository.cpp  Repository.hpp  RepositoryAssets.cpp  RepositoryAssets.hpp  RepositoryTypes.hpp  ResourceObject.hpp  ResourceSet.cpp  ResourceSet.hpp
Runtime/Tests/Skore/: EntryPoint.cpp  EntryPoint.hpp
Runtime/Tests/Skore/Core/: AlgorithmTest.cpp  ArrayTest.cpp  FormatterTest.cpp  FunctionTest.cpp  HashMapTest.cpp  HashSetTest.cpp  PathTest.cpp  ReflectionTest.cpp  SharedPtrTest.cpp  StringConverterTests.cpp  StringViewTest.cpp  TypeInfoTests.cpp  UUIDTest.cpp
Runtime/Tests/Skore/IO/: FileSystemTest.cpp
(+10 files in other folders)
